tests/ui/default/default_with_skip_setters.stderr
error: cannot use #[default(...)] on field that skips setters
 --> tests/ui/default/default_with_skip_setters.rs:5:7
  |
5 |     #[default(42)]
  |       ^^^^^^^^^^^

error: field skips setters here
 --> tests/ui/default/default_with_skip_setters.rs:6:7
  |
6 |     #[skip(setters)]
  |       ^^^^
